# yamp-32

./: .gitlab-ci.yml  README.md  thinpad_top.xpr
asm/: user-sample.s
cpp-cpu-model/: CMakeLists.txt  bin-kernel.h  bin-matrix.h  bin2c.c  bpu.cc  bpu.h  cache.cc  cache.h  cpu.cc  cpu.h  termtest.cc  termtest.h  test.py  uart.cc  uart.h
thinpad_top.srcs/sim_1/new/: tb.sv  tb_fifo_fwft.v  tb_uart.v
thinpad_top.srcs/sources_1/ip/blk_mem_icache/: blk_mem_icache.xci  blk_mem_icache.xml
thinpad_top.srcs/sources_1/ip/blk_mem_icache/sim/: blk_mem_icache.v
thinpad_top.srcs/sources_1/ip/blk_mem_icache/synth/: blk_mem_icache.vhd
thinpad_top.srcs/sources_1/ip/blk_mem_regfile/: blk_mem_regfile.xci  blk_mem_regfile.xml
thinpad_top.srcs/sources_1/ip/blk_mem_regfile/sim/: blk_mem_regfile.v
thinpad_top.srcs/sources_1/ip/blk_mem_regfile/synth/: blk_mem_regfile.vhd
thinpad_top.srcs/sources_1/ip/c_add_s32/: c_add_s32.xci  c_add_s32.xml
thinpad_top.srcs/sources_1/ip/fifo_uart_queue/: fifo_uart_queue.xci  fifo_uart_queue.xml
thinpad_top.srcs/sources_1/ip/mult_exu/: mult_exu.xci  mult_exu.xml
thinpad_top.srcs/sources_1/ip/pll_example/: pll_example.v  pll_example.xci  pll_example.xml  pll_example_clk_wiz.v
thinpad_top.srcs/sources_1/new/: async.v  bypass_net.v  fake_uart.v  fifo_fwft_sclk.v  thinpad_top.v  uart.v  xpm_sdpram_bypass.v  yamp32_biu.v  yamp32_bpu.v  yamp32_core.v  yamp32_ctrl.v  yamp32_exu.v  yamp32_icache.v  yamp32_idec.v  yamp32_idu.v  yamp32_ifu.v  yamp32_lsu.v  yamp32_parameters.vh  yamp32_regfile.v  yamp32_segmap.v  yamp32_wb_mux.v
(+7 files in other folders)
